2019-04-30 Shahzad Muzaffar  <@smuzaffar>
	V05-08-25: By default run code-format on changed files only.
	V05-08-26: Fix regexp for search for code-format files.
	V05-08-27: Properly treat USER_CODE_*_FILES and USER_CODE_*_FILE
	values.

2019-04-29 Shahzad Muzaffar  <@smuzaffar>
	V05-08-23: Fix fix-code-checks-yaml.py to keep the extra new line
	for readability-braces-around-statements clang-tidy check
	V05-08-24: Use find -iname to find files 

2019-04-04 Shahzad Muzaffar  <@smuzaffar>
	V05-08-16: Included changes from V05-08-21
	Only include top level headers files in auto-generated classes.h

2019-04-09 Shahzad Muzaffar  <@smuzaffar>
	V05-08-21,22: Fix code-fomat rule and run it for all file with extnsion
	cpp, cc, cxx, h, hpp, hh

2019-04-02 Shahzad Muzaffar  <@smuzaffar>
	V05-08-20: Fix path for listcomponents.

2019-04-01 Shahzad Muzaffar  <@smuzaffar>
	V05-08-14: Bug fix for CXXModules IB: Fix GENREFLEX_ARGS
	V05-08-13: Bug fix for CXXModules IB: Avoid Package/interface missing error;
	Auto generte one big classes.h/xml for packages with multiple classes.h files.

2019-03-29 Shahzad Muzaffar  <@smuzaffar>
	V05-08-12: Bug fix: This fixes the problem is two source files
	propose same change for a header.

2019-03-25 Shahzad Muzaffar  <@smuzaffar>
	V05-08-10: Bug fix: In case of deleted packages, do not re-create
	python/Subsystem/__init__.py file if already exists.
	V05-08-11: Make sure indirect PCM are also generated first.

2019-03-21 Shahzad Muzaffar  <@smuzaffar>
	V05-08-08: Fix rebuild issues. generate lcg dict cc file only after
	all pcm of its deps.
	V05-08-09: Fix coral build rules for python

2019-03-04 Shahzad Muzaffar  <@smuzaffar>
	V05-08-07: For cxxmodules autot generate classes.h and module.modulemap.

2019-02-26 Shahzad Muzaffar  <@smuzaffar>
	V05-07-56: Make all BuildFile flags available to gmake.
	V05-07-55: Fixed rootmap dependency rule to avoid rebuilts at
	unittests time. Make use of USE_SOURCE_ONLY flag too.
