@@ -1,5 +1,5 @@
 .PHONY: code-format-all code-format code-format-dump-config code-format/$(SCRAM_SOURCEDIR)/% code-checks-run code-checks code-checks-apply code-checks-internal code-checks-dump-config code-checks-all
-CODE_FORMAT_FILES_EXTS:=cpp cc cxx h hh hpp
+CODE_FORMAT_FILES_EXTS:=cpp cc cxx h hh hpp icc i
 CODE_CHECKS_CONFIG_FILE:=$(wildcard $(LOCALTOP)/$(SCRAM_SOURCEDIR)/.clang-tidy)
 CODE_FORMAT_CONFIG_FILE:=$(wildcard $(LOCALTOP)/$(SCRAM_SOURCEDIR)/.clang-format)
 ifeq ($(strip $(CODE_CHECKS_CONFIG_FILE)),)
@@ -52,6 +52,7 @@ code-checks-apply:
 	fi
 ifneq ($(strip $(filter code-format-all,$(MAKECMDGOALS))),)
   CODE_CHECK_FILES:=
+  CODE_FORMAT_FILES_EXTS:=$(shell $(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/find-extensions.sh $(WORKINGDIR) | $(CMD_grep) -vi '^f')
   ifeq ($(strip $(USER_CODE_FORMAT_FILES)$(USER_CODE_FORMAT_FILE)),)
     CODE_CHECK_FILES:=$(patsubst $(SCRAM_SOURCEDIR)/%,%,$(shell find $(SCRAM_SOURCEDIR) $(wordlist 2,999999,$(foreach e,$(CODE_FORMAT_FILES_EXTS),-o -iname '*.$e'))))
   else ifneq ($(strip $(USER_CODE_FORMAT_FILE)),)
